fix: improve height on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -24,7 +24,7 @@ body {
   align-items: center;
   justify-content: center;
   min-width: 100vw;
-  min-height: 100vh;
+  min-height: 100dvh;
 }
 
 @media (prefers-color-scheme: light) {
